PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.4

- Core:
  . Fixed bug #71441 (Typehinted Generator with return in try/finally crashes).
    (Bob)

04 Feb 2016 PHP 7.0.3

- Core:
  . Fixed bug #71336 (Wrong is_ref on properties as exposed via
    get_object_vars()). (Laruence)
  . Fixed bug #71248 (Wrong interface is enforced). (Dmitry)
  . Fixed bug #71300 (Segfault in zend_fetch_string_offset). (Laruence)
  . Fixed bug #71221 (Null pointer deref (segfault) in get_defined_vars via
    ob_start). (hugh at allthethings dot co dot nz)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Added support for new HTTP 451 code. (Julien)
  . Fixed Bug #71275 (Bad method called on cloning an object having a trait).
    (Bob)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol)
  . Fixed bug #71297 (Memory leak with consecutive yield from). (Bob)
  . Fixed bug #71314 (var_export(INF) prints INF.0). (Andrea)

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- CURL:
  . Fixed bug #71227 (Can't compile php_curl statically). (Anatol)
  . Fixed bug #71225 (curl_setopt() fails to set CURLOPT_POSTFIELDS with
    reference to CURLFile). (Laruence)

- Interbase:
  . Fixed Bug #71305 (Crash when optional resource is omitted).
  (Laruence, Anatol)

- LDAP:
  . Fixed bug #71249 (ldap_mod_replace/ldap_mod_add store value as string
    "Array"). (Laruence)

- mbsgring:
  . Fixed bug #71397 (mb_send_mail segmentation fault). (Andrea, Yasuo)

- SOAP:
  . Fixed bug #70979 (crash with bad soap request). (Anatol)
  
- SPL:
  . Fixed bug #71204 (segfault if clean spl_autoload_funcs while autoloading).
    (Laruence)
  . Fixed bug #71202 (Autoload function registered by another not activated
    immediately). (Laruence)

- Session: